# minicapy

./: .gitignore  Dockerfile.manylinux  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml  publish_test.yml
minicapy/: .gitignore  minica.py
tests/: test_minica.py
